# spheric_harmonies

./: README.md  [Marinos_Koutsomichalis]_Mapping_and_Visualization(b-ok.org).epub  oscmanager.cpp  oscmanager.h  oscmodus.h  singleperson.cpp  singleperson.h
kunstverein/: SynthDefs.scd  quarks.scd  setup.scd  tools.scd
kunstverein/tests/: quant.scd  timing.scd
kunstverein/v0.1/: main.scd
object_recognition_c++/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  Relief.cpp  Relief.h  cmake_install.cmake  facebook.cpp  facebook.h  main.cpp  midicontroller.cpp  midicontroller.h
object_recognition_c++/tests/: a.out  foobar.cpp
object_recognition_c++/tests/miditest/: Makefile  miditest  miditest.cpp
tests/: BasicRythm.scd  Setup.scd  first_complete.scd  proxytest2.scd  sc_15.scd  sc_dc.scd  sc_drum.scd  sc_effects.scd  synth_and_rev.scd  synth_with_midi_controle.scd  test.sc  tetrachord.scd
tests/oscCommunication/: osc.scd
