cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set (CMAKE_CXX_STANDARD 11)
add_library( Relief Relief.cpp Relief.h)
add_library( Midicontroller midicontroller.cpp midicontroller.h)
add_library( RtMidi rtmidi/RtMidi.cpp rtmidi/RtMidi.h)
target_link_libraries( RtMidi -ljack)
set_target_properties(RtMidi PROPERTIES COMPILE_FLAGS -D__UNIX_JACK__)
target_link_libraries( Midicontroller RtMidi -ljack  )
set_target_properties(Midicontroller PROPERTIES COMPILE_FLAGS -D__UNIX_JACK__)
add_executable( DisplayImage main.cpp )
target_link_libraries( DisplayImage Relief  Midicontroller ${OpenCV_LIBS} -ljack)
set_target_properties(DisplayImage PROPERTIES COMPILE_FLAGS -D__UNIX_JACK__)
add_custom_target(run ./DisplayImage)
